--- a/BigShow1949/Classes/03 - ViewLayout(视图布局)/RGCardViewLayout/RGCardLayoutViewController.storyboard
+++ b/BigShow1949/Classes/03 - ViewLayout(视图布局)/RGCardViewLayout/RGCardLayoutViewController.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15A2301" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -29,7 +29,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="reuse" id="aqk-3e-1LG" customClass="RGCollectionViewCell">
-                                        <rect key="frame" x="119" y="0.0" width="363" height="608"/>
+                                        <rect key="frame" x="118.5" y="0.0" width="363" height="608"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="363" height="608"/>
@@ -219,12 +219,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-48" y="149"/>
+            <point key="canvasLocation" x="78" y="6"/>
         </scene>
     </scenes>
     <resources>
-        <image name="coffee_to_go-50" width="50" height="50"/>
-        <image name="documentary-50" width="50" height="50"/>
-        <image name="headphones-50" width="50" height="50"/>
+        <image name="coffee_to_go-50" width="25" height="25"/>
+        <image name="documentary-50" width="25" height="25"/>
+        <image name="headphones-50" width="25" height="25"/>
     </resources>
 </document>
