--- a/BigShow1949/Classes/03 - ViewLayout(视图布局)/HorizontalScroll/HWCollectionViewCell.xib
+++ b/BigShow1949/Classes/03 - ViewLayout(视图布局)/HorizontalScroll/HWCollectionViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15A2301" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -33,7 +33,7 @@
             <connections>
                 <outlet property="label" destination="Ym3-z2-11m" id="kJ8-RC-JQW"/>
             </connections>
-            <point key="canvasLocation" x="685" y="451"/>
+            <point key="canvasLocation" x="394" y="401"/>
         </collectionViewCell>
     </objects>
 </document>
